SET( LIB_IPC_SRC
    "messenger.c"
)

FILE( GLOB LIB_IPC_HEADERS "../../include/tinia/ipc/*.h" )
  
ADD_DEFINITIONS( -fPIC )

ADD_LIBRARY( tiniaipc STATIC ${LIB_IPC_SRC} ${LIB_IPC_HEADERS})
TARGET_LINK_LIBRARIES( tiniaipc ${RT} )

#INSTALL( TARGETS trell
#  LIBRARY DESTINATION lib
#  COMPONENT libtrell
#  PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
#)

#INSTALL( FILES
#  ${LIB_TRELL_HEADERS}
#  DESTINATION include/tinia/trell
#  COMPONENT libtrell-dev
#)
